--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <link href="src/index.css" rel="stylesheet" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Тестирующая система</title>
   </head>
   <body>
