--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <link href="src/index.css" rel="stylesheet" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Тестирующая система</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Тестирующая система</title>
+  <style>
+    * {
+      margin: 0;
+    }
+  </style>
+</head>
+<body>
+<div id="root"></div>
+</body>
 </html>
